--- a/job_submit/Makefile
+++ b/job_submit/Makefile
@@ -2,7 +2,7 @@
 # Makefile for UD SLURM SPANK plugins
 #
 
-SLURM_PREFIX		= /opt/shared/slurm/current
+SLURM_PREFIX		= /opt/shared/slurm/17.02.7
 SLURM_INCLUDE		= $(SLURM_PREFIX)/include
 SLURM_LIB		= $(SLURM_PREFIX)/lib
 SLURM_SRC		= $(SLURM_PREFIX)/src
@@ -11,10 +11,10 @@ PLUGIN			= job_submit_udhpc.so
 
 #
 
-CPPFLAGS		+= -I$(SLURM_INCLUDE) -I$(SLURM_SRC)
+CPPFLAGS		+= -I$(SLURM_INCLUDE) -I$(SLURM_SRC) -I$(SLURM_SRC)/build
 CFLAGS			+= -Wall -fPIC -DPIC
 LDFLAGS			+= -L$(SLURM_LIB) -Wl,-soname,$(PLUGIN)
-LIBS			+=
+LIBS			+= -lm
 
 #
 
