Updates for change, hardware-specific partitions => workgroup partitions

--- a/job_submit/CMakeLists.txt
+++ b/job_submit/CMakeLists.txt
@@ -18,6 +18,18 @@ IF (NOT SLURM_SOURCE_DIR)
   SET (SLURM_SOURCE_DIR "${SLURM_PREFIX}/src" CACHE PATH "Directory containing the SLURM source package.")
 ENDIF (NOT SLURM_SOURCE_DIR)
 
+IF (NOT DISABLE_RESERVED_PARTITION)
+  SET (DISABLE_RESERVED_PARTITION OFF CACHE BOOL "Do not check for proper use of 'reserved' partition.")
+ENDIF (NOT DISABLE_RESERVED_PARTITION)
+
+IF (NOT DISABLE_HARDWARE_SPECIFIC_PARTITIONS)
+  SET (DISABLE_HARDWARE_SPECIFIC_PARTITIONS OFF CACHE BOOL "Do not auto-set QOS for hardware-specific partitions.")
+ENDIF (NOT DISABLE_HARDWARE_SPECIFIC_PARTITIONS)
+
+IF (NOT DISABLE_WORKGROUP_PARTITIONS)
+  SET (DISABLE_WORKGROUP_PARTITIONS OFF CACHE BOOL "Do not set workgroup partitions when requested via spank plugin.")
+ENDIF (NOT DISABLE_WORKGROUP_PARTITIONS)
+
 IF (NOT SLURM_BUILD_DIR)
   SET (SLURM_BUILD_DIR "" CACHE PATH "Directory containing the SLURM build (e.g. config.h).")
 ENDIF (NOT SLURM_BUILD_DIR)
@@ -56,5 +68,16 @@ ADD_LIBRARY (job_submit_udhpc MODULE job_submit_udhpc.c)
 INCLUDE_DIRECTORIES (BEFORE ${SLURM_INCLUDE_DIRS} ${SLURM_SOURCE_DIR} ${SLURM_BUILD_DIR})
 TARGET_LINK_LIBRARIES (job_submit_udhpc -lm)
 SET_TARGET_PROPERTIES (job_submit_udhpc PROPERTIES PREFIX "" SUFFIX "" OUTPUT_NAME "job_submit_udhpc.so")
+GET_TARGET_PROPERTY(compile_flags job_submit_udhpc COMPILE_FLAGS)
+IF (compile_flags STREQUAL "compile_flags-NOTFOUND")
+  SET(compile_flags "")
+ENDIF ()
+IF ( DISABLE_RESERVED_PARTITION )
+  SET(compile_flags "${compile_flags} -DDISABLE_RESERVED_PARTITION")
+ENDIF ()
+IF ( DISABLE_HARDWARE_SPECIFIC_PARTITIONS )
+  SET(compile_flags "${compile_flags} -DDISABLE_HARDWARE_SPECIFIC_PARTITIONS")
+ENDIF ()
+SET_TARGET_PROPERTIES (job_submit_udhpc PROPERTIES COMPILE_FLAGS "${compile_flags}")
 INSTALL (TARGETS job_submit_udhpc DESTINATION ${SLURM_MODULES_DIR}/lib/slurm)
 
