Debugging, improvements on code for v1.0.0 Slurm config update

--- a/job_submit/CMakeLists.txt
+++ b/job_submit/CMakeLists.txt
@@ -30,6 +30,10 @@ IF (NOT DISABLE_WORKGROUP_PARTITIONS)
   SET (DISABLE_WORKGROUP_PARTITIONS OFF CACHE BOOL "Do not set workgroup partitions when requested via spank plugin.")
 ENDIF (NOT DISABLE_WORKGROUP_PARTITIONS)
 
+IF (NOT DISABLE_GPU_GRES_ADJUSTMENTS)
+  SET (DISABLE_GPU_GRES_ADJUSTMENTS OFF CACHE BOOL "Do not enforce GPU-to-CPU binding on jobs requesting GPU GRESes.")
+ENDIF (NOT DISABLE_GPU_GRES_ADJUSTMENTS)
+
 IF (NOT SLURM_BUILD_DIR)
   SET (SLURM_BUILD_DIR "" CACHE PATH "Directory containing the SLURM build (e.g. config.h).")
 ENDIF (NOT SLURM_BUILD_DIR)
