New tools added

--- a/job_submit/CMakeLists.txt
+++ b/job_submit/CMakeLists.txt
@@ -34,6 +34,10 @@ IF (NOT DISABLE_GPU_GRES_ADJUSTMENTS)
   SET (DISABLE_GPU_GRES_ADJUSTMENTS OFF CACHE BOOL "Do not enforce GPU-to-CPU binding on jobs requesting GPU GRESes.")
 ENDIF (NOT DISABLE_GPU_GRES_ADJUSTMENTS)
 
+IF (NOT DISABLE_PRIORITY_ACCESS_QOS)
+  SET (DISABLE_PRIORITY_ACCESS_QOS OFF CACHE BOOL "Do not automatically set priority-access QOS on jobs headed to workgroup partitions.")
+ENDIF (NOT DISABLE_PRIORITY_ACCESS_QOS)
+
 IF (NOT SLURM_BUILD_DIR)
   SET (SLURM_BUILD_DIR "" CACHE PATH "Directory containing the SLURM build (e.g. config.h).")
 ENDIF (NOT SLURM_BUILD_DIR)
