Additional build options were not being #defined in the compile environment in CMakeLists.txt

--- a/job_submit/CMakeLists.txt
+++ b/job_submit/CMakeLists.txt
@@ -86,6 +86,12 @@ ENDIF ()
 IF ( DISABLE_HARDWARE_SPECIFIC_PARTITIONS )
   SET(compile_flags "${compile_flags} -DDISABLE_HARDWARE_SPECIFIC_PARTITIONS")
 ENDIF ()
+IF ( DISABLE_GPU_GRES_ADJUSTMENTS )
+  SET(compile_flags "${compile_flags} -DDISABLE_GPU_GRES_ADJUSTMENTS")
+ENDIF ()
+IF ( DISABLE_WORKGROUP_PARTITIONS )
+  SET(compile_flags "${compile_flags} -DDISABLE_WORKGROUP_PARTITIONS")
+ENDIF ()
 SET_TARGET_PROPERTIES (job_submit_udhpc PROPERTIES COMPILE_FLAGS "${compile_flags}")
 INSTALL (TARGETS job_submit_udhpc DESTINATION ${SLURM_MODULES_DIR}/lib/slurm)
 
